--- a/Todo.Web/Components/Pages/SpecificTodoItemComponent.razor.css
+++ b/Todo.Web/Components/Pages/SpecificTodoItemComponent.razor.css
@@ -57,6 +57,10 @@
     color: black;
 }
 
+.todo-item-title:hover {
+    background-color: #f8f9fa;;
+}
+
 .title-input {
     width: 100%;
     font-size: 24px;
