Frontend for Confirmation email

--- a/Todo.Web/Components/Account/Pages/Register.razor
+++ b/Todo.Web/Components/Account/Pages/Register.razor
@@ -78,7 +78,7 @@
             {
                 Message = "Registration successful! Redirecting to login...";
                 
-                NavigationManager.NavigateTo("/Account/Login");
+                NavigationManager.NavigateTo("/Account/RegisterConfirmation");
             }
             else
             {
