--- a/Todo.Web/Components/Account/Pages/RegisterConfirmation.razor
+++ b/Todo.Web/Components/Account/Pages/RegisterConfirmation.razor
@@ -1,70 +1,46 @@
 ﻿@page "/Account/RegisterConfirmation"
-
-@using System.Text
-@using Microsoft.AspNetCore.Identity
-@using Microsoft.AspNetCore.WebUtilities
-@using Todo.Core.Entities
-
-
-@inject UserManager<ApplicationUser> UserManager
-@inject IEmailSender<ApplicationUser> EmailSender
+@using Todo.Web.Auth
 @inject NavigationManager NavigationManager
-@inject IdentityRedirectManager RedirectManager
+@inject IAuthService AuthService
 
-<PageTitle>Register confirmation</PageTitle>
+<PageTitle>Email Confirmation</PageTitle>
 
-<h1>Register confirmation</h1>
+<div class="container">
+    <h2>Email Confirmation Required</h2>
+    <p>An email has been sent to your address with a confirmation link. Please check your email and click the link to activate your account.</p>
+    <p>If you didn’t receive the email, click below to resend the confirmation email.</p>
 
-<StatusMessage Message="@statusMessage"/>
+    <button class="btn btn-primary" @onclick="ResendConfirmationEmail">Resend Email</button>
 
-@if (emailConfirmationLink is not null)
-{
-    <p>
-        This app does not currently have a real email sender registered, see <a href="https://aka.ms/aspaccountconf">these docs</a> for how to configure a real email sender.
-        Normally this would be emailed: <a href="@emailConfirmationLink">Click here to confirm your account</a>
-    </p>
-}
-else
-{
-    <p>Please check your email to confirm your account.</p>
-}
+    @if (!string.IsNullOrWhiteSpace(Message))
+    {
+        <p class="text-success">@Message</p>
+    }
+</div>
 
 @code {
-    private string? emailConfirmationLink;
-    private string? statusMessage;
+    private string? Message { get; set; }
 
-    [CascadingParameter]
-    private HttpContext HttpContext { get; set; } = default!;
-
-    [SupplyParameterFromQuery]
-    private string? Email { get; set; }
-
-    [SupplyParameterFromQuery]
-    private string? ReturnUrl { get; set; }
-
-    protected override async Task OnInitializedAsync()
+    private async Task ResendConfirmationEmail()
     {
-        if (Email is null)
+        try
         {
-            RedirectManager.RedirectTo("");
+            var email = AuthService.GetUserEmail();
+            var result = await AuthService.ResendConfirmationEmailAsync(email);
+            
+            if (result.Succeeded)
+            {
+                Message = "Confirmation email has been resent.";
+            }
+            else
+            {
+                Message = result.Error;
+            }
         }
-
-        var user = await UserManager.FindByEmailAsync(Email);
-        if (user is null)
+        catch (Exception ex)
         {
-            HttpContext.Response.StatusCode = StatusCodes.Status404NotFound;
-            statusMessage = "Error finding user for unspecified email";
-        }
-        else if (EmailSender is IdentityNoOpEmailSender)
-        {
-            // Once you add a real email sender, you should remove this code that lets you confirm the account
-            var userId = await UserManager.GetUserIdAsync(user);
-            var code = await UserManager.GenerateEmailConfirmationTokenAsync(user);
-            code = WebEncoders.Base64UrlEncode(Encoding.UTF8.GetBytes(code));
-            emailConfirmationLink = NavigationManager.GetUriWithQueryParameters(
-                NavigationManager.ToAbsoluteUri("Account/ConfirmEmail").AbsoluteUri,
-                new Dictionary<string, object?> { ["userId"] = userId, ["code"] = code, ["returnUrl"] = ReturnUrl });
+            Console.WriteLine(ex.Message);
+            Message = "An error occurred while resending the email.";
         }
     }
-
 }
