Resend email confirmation button linked to the right site

--- a/Todo.Web/Components/Account/Pages/RegisterConfirmation.razor
+++ b/Todo.Web/Components/Account/Pages/RegisterConfirmation.razor
@@ -8,7 +8,7 @@
 <div class="container">
     <h2>Email Confirmation Required</h2>
     <p>An email has been sent to your address with a confirmation link. Please check your email and click the link to activate your account.</p>
-    <p>If you didn’t receive the email, enter your email below and click Resend Email.</p>
+    <p>If you didn’t receive the email, Or If your email Images not activated enter your email below and click Resend Email.</p>
 
     <div class="form-group">
         <label for="emailInput">Email Address</label>
