--- a/Todo.Web/Components/Pages/AllTaskPage.razor.css
+++ b/Todo.Web/Components/Pages/AllTaskPage.razor.css
@@ -22,6 +22,23 @@
     color: white;
 }
 
+.checkbox-label{
+    display: inline-block;
+    border-radius: 4px;
+    padding: 2px 8px;
+}
+
+.checkbox{
+    display: inline-block;
+    margin: 8px;
+}
+.filter-button{
+    display: inline-block;
+    border-radius: 4px;
+    color: white;
+    background-color: #1B6EC2;
+}
+
 span{
     font-weight: bold;
 }
