--- a/Todo.Web/Components/Layout/NavMenu.razor
+++ b/Todo.Web/Components/Layout/NavMenu.razor
@@ -22,7 +22,7 @@
             <Authorized>
                 <div class="nav-item px-3">
                     <NavLink class="nav-link" href="Project/Shared">
-                        <img class="bi sharedWithMe" src="images/sharedWithMe.png" alt="" /> Shared Projects
+                        <img class="bi sharedWithMe" src="images/sharedWithMe-icon.png" alt="" /> Shared Projects
                     </NavLink>
                 </div>
                 <div class="nav-item px-3">
