--- a/Todo.Web/Components/Pages/Home.razor
+++ b/Todo.Web/Components/Pages/Home.razor
@@ -27,6 +27,20 @@
         {
             <div class="project" @onclick="() => NavigateToProject(project.Id)">
                 <p class="project-name">@project.Name</p>
+                <div class="project-dropdown-menu" @onclick:stopPropagation>
+                    
+                    <button class="project-dropdown-button" @onclick="() => DropdownMenu(project)">
+                        <img src="images/menu.png" alt=""/>
+                    </button>
+                        @if (CurrentDropdownMenu == project)
+                        {
+                        <div class="project-dropdown">
+                            <button>View project</button>
+                               <button>Share project</button>
+                            <button @onclick="() => DeleteProjectAsync(project.Id)">Delete todo-list</button>
+                        </div>
+                        } 
+</div>
             </div>
         }
     }
@@ -57,6 +71,7 @@
     private List<ProjectDto>? _projects;
     private bool _showError = false;
     private string _errorMessage = "";
+    private ProjectDto? CurrentDropdownMenu { get; set; }
     
     // Get all the project for the given user
     protected override async Task OnInitializedAsync()
@@ -113,6 +128,24 @@
         await Task.Delay(1000);
         _errorMessage = "";
         _showError = false;
+    }
+    private void DropdownMenu(ProjectDto project)
+    {
+    CurrentDropdownMenu = CurrentDropdownMenu == project ? null : project;
+    }
+
+    private async Task DeleteProjectAsync(int projectId)
+    {
+        var isDeleted = await ProjectService.DeleteProjectAsync(projectId);
+
+        if (isDeleted)
+        {
+            _projects = _projects.Where(p => p.Id != projectId).ToList();
+        }
+        else
+        {
+            await ShowErrorMessage("Failed to delete project. Please try again.");
+        }
     }
     
 }
