--- a/Todo.Web/Components/Pages/ProjectPage.razor
+++ b/Todo.Web/Components/Pages/ProjectPage.razor
@@ -48,6 +48,8 @@ else
                             @if (CurrentDropdownMenu == todoList)
                             {
                                 <div class="todo-list-dropdown">
+                                    <button>View list</button>
+                                    <button>Share list</button>
                                     <button @onclick="() => DeleteTodoList(todoList.Id)">Delete todo-list</button>
                                 </div>
                             }   
