--- a/Todo.Web/Components/Pages/ProjectPage.razor
+++ b/Todo.Web/Components/Pages/ProjectPage.razor
@@ -22,9 +22,10 @@
 else
 {
     <title>@CurrentProject.Name</title>
-
-    <h1>@CurrentProject.Name</h1>
-
+    <div class="project-title">
+        <h1>@CurrentProject.Name</h1>
+        <img src="images/menu.png" alt=""/>
+    </div>
     @if (_showError)
     {
         <b class="error-message">
